--- a/web-developer-homework.github.io/final_project/app/sass/style.sass
+++ b/web-developer-homework.github.io/final_project/app/sass/style.sass
@@ -78,7 +78,7 @@ $light-bg: #f8f8f0
         background-color: #000
         +font(18px, 'Helvetica_medium', $light)
         color: #fff
-      button
+      input[type="submit"]
         +btn(270px, 60px, 18px)
       .callback-text
         margin-top: 15px
