--- a/web-developer-homework.github.io/final_project/app/sass/style.sass
+++ b/web-developer-homework.github.io/final_project/app/sass/style.sass
@@ -174,6 +174,23 @@ $light-bg: #f8f8f0
     img
       position: absolute
       right: 0
+.section-thanks
+  height: 100vh
+  background: url('../img/sec-1/thanks-bg.jpg') center center no-repeat
+  .sell-prop
+    margin-top: 20%
+    text-align: center
+    h1
+      margin-bottom: 30px
+    .get-back
+      margin-top: 50px
+      padding-top: 18px
+      display: inline-block
+      +btn(270px, 62px, 18px)
+      &:hover
+        text-decoration: none
+        
+      
 
 // SECTION-2
 .section-2
