--- a/web-developer-homework.github.io/final_project/app/sass/style.sass
+++ b/web-developer-homework.github.io/final_project/app/sass/style.sass
@@ -586,8 +586,7 @@ $light-bg: #f8f8f0
         color: #fff
 .video-box
   display: none
-  width: 97%
-  height: 70%
+  +wh(97%, 70%)
   position: fixed
   top: 50%
   left: 50%
@@ -610,8 +609,8 @@ $light-bg: #f8f8f0
     cursor: pointer
     z-index: 99
   iframe
-    width: 100%
-    height: 100%
+    +wh(100%, 100%)
+    border: none
 
 .active
   display: block
